clusters/k4/kubernetes/apps/monitoring/victoria-metrics/logs/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vlsingle-route
  annotations:
    gatus.home-operations.com/enabled: "true"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - victoria-logs.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - kind: Service
          name: vlsingle-vl
          port: 9428
